--- a/index.html
+++ b/index.html
@@ -7,67 +7,165 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.css"/>
 <link href="https://fonts.googleapis.com/css2?family=Saira:wght@400;700&display=swap" rel="stylesheet">
 <style>
+/* global */
 * { box-sizing:border-box; }
 html,body { height:100%; margin:0; }
 body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel,
 #license-bar, #tooltip-preview, #qr-overlay, #youtube-overlay,
 #vr-button, #top-qr-button { user-select: none; }
 body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; position:relative; background:#000; }
+
+/* panorama container */
 #panorama { width:100vw; height:100vh; position:relative; z-index:0; }
+
+/* License bar */
 #license-bar {
-  position: fixed; bottom: 12px; left:50%; transform:translateX(-50%);
-  max-width: 92%; background: rgba(0,0,0,0.18); backdrop-filter: blur(10px);
-  color: #fff; padding: 10px 18px; font-size: 13px; z-index: 12;
-  overflow-y: auto; text-align:center; white-space: pre-wrap; border-radius: 12px;
+  position: fixed;
+  bottom: 12px;
+  left: 50%;
+  transform: translateX(-50%);
+  max-width: 92%;
+  background: rgba(0,0,0,0.18);
+  backdrop-filter: blur(10px);
+  color: #fff;
+  padding: 10px 18px;
+  font-size: 13px;
+  z-index: 12;
+  overflow-y: auto;
+  text-align: center;
+  white-space: pre-wrap;
+  border-radius: 12px;
 }
-#overlay { position: fixed; inset:0; background: rgba(0,0,0,0.40); display:flex; align-items:center; justify-content:center; z-index:40; }
+
+/* Intro overlay - center panel */
+#overlay {
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,0.40);
+  display:flex; align-items:center; justify-content:center;
+  z-index:40;
+}
 #overlay[aria-hidden="true"] { display:none; }
 #overlay-content {
-  width:50vw; height:50vh; max-width:90vw; max-height:90vh;
-  background: rgba(255,255,255,0.18); backdrop-filter: blur(10px); padding:28px; border-radius:18px;
-  color:#fff; text-align:left; font-size:1.05rem; line-height:1.4; pointer-events:auto;
-  display:flex; flex-direction:column; justify-content:space-between;
+  width:45vw;
+  height:50vw;
+  max-width:90vw;
+  max-height:90vh;
+  background: rgba(255,255,255,0.18);
+  backdrop-filter: blur(10px);
+  padding:28px;
+  border-radius:18px;
+  color:#fff;
+  text-align:center; /* center text horizontally */
+  font-size:1.05rem;
+  line-height:1.4;
+  pointer-events:auto;
+  display:flex; 
+  flex-direction:column; 
+  justify-content:space-between;
 }
 #overlay-content p { margin:0 0 10px 0; color:#fff; }
+
+/* Instructions */
 #instructions-line { text-decoration:underline; font-weight:700; margin-top:6px; color:#fff; }
 #instructions-list { text-align:left; margin-top:8px; max-width:480px; line-height:1.6em; color:#fff; }
 #instructions-list p { margin:6px 0 0 0; }
+
+/* Dismiss message line (small, off-gray) */
 #dismiss-message { margin-top:10px; font-size:0.95rem; color:#d0d0d0; text-align:center; }
+
+/* tooltip preview */
 #tooltip-preview {
-  display:none; position: fixed; width: 280px; background: rgba(0,0,0,0.9);
-  color:#fff; text-align:center; padding:10px; border-radius:10px; z-index:9999;
-  pointer-events:auto; font-size:0.85rem; line-height:1.2; box-shadow: 0 6px 18px rgba(0,0,0,0.6);
+  display:none;
+  position: fixed;
+  width: 280px;
+  background: rgba(0,0,0,0.9);
+  color:#fff;
+  text-align:center;
+  padding:10px;
+  border-radius:10px;
+  z-index:9999;
+  pointer-events:auto;
+  font-size:0.85rem;
+  line-height:1.2;
+  box-shadow: 0 6px 18px rgba(0,0,0,0.6);
 }
+
+/* hotspot panel */
 #hotspot-panel {
-  position: fixed; top: 18px; left:50%; transform: translateX(-50%);
-  background: rgba(0,0,0,0.20); backdrop-filter: blur(10px);
-  padding:12px 18px; border-radius:14px; color:#fff; font-size:0.98rem;
-  text-align:center; max-width:82%; z-index:20; display:none;
+  position: fixed;
+  top: 18px;
+  left:50%;
+  transform: translateX(-50%);
+  background: rgba(0,0,0,0.20);
+  backdrop-filter: blur(10px);
+  padding:12px 18px;
+  border-radius:14px;
+  color:#fff;
+  font-size:0.98rem;
+  text-align:center;
+  max-width:82%;
+  z-index:20;
+  display:none;
 }
+
+/* 360 video panel */
 #video-link-panel {
-  position: fixed; top: calc(18px + 72px + 6px); left:50%; transform:translateX(-50%);
-  background: rgba(0,0,0,0.20); backdrop-filter: blur(10px);
-  padding:10px 14px; border-radius:12px; color:#fff; font-size:0.96rem;
-  text-align:center; max-width:66%; z-index:20; cursor:pointer; display:none;
+  position: fixed;
+  top: calc(18px + 72px + 6px); 
+  left:50%;
+  transform:translateX(-50%);
+  background: rgba(0,0,0,0.20);
+  backdrop-filter: blur(10px);
+  padding:10px 14px;
+  border-radius:12px;
+  color:#fff;
+  font-size:0.96rem;
+  text-align:center;
+  max-width:66%;
+  z-index:20;
+  cursor:pointer;
+  display:none;
 }
-#youtube-overlay { display:none; position:fixed; inset:0; background: rgba(0,0,0,0.55); z-index:70; align-items:center; justify-content:center; opacity:0; transition:opacity .28s; }
-#youtube-content { background: rgba(255,255,255,0.14); backdrop-filter: blur(10px); border-radius:16px; padding:12px; max-width:90%; width:880px; max-height:80%; height:480px; display:flex; flex-direction:column; align-items:center; justify-content:center; }
-#youtube-content iframe { width:100%; height:100%; border-radius:10px; border:none; allowfullscreen: true; }
-#qr-overlay { display:none; position:fixed; inset:0; background: rgba(0,0,0,0.55); z-index:70; align-items:center; justify-content:center; opacity:0; transition:opacity .28s; }
+
+/* youtube modal */
+#youtube-overlay {
+  display:none; position:fixed; inset:0; background: rgba(0,0,0,0.55);
+  z-index:70; align-items:center; justify-content:center; opacity:0; transition:opacity .28s;
+}
+#youtube-content {
+  background: rgba(255,255,255,0.14); backdrop-filter: blur(10px);
+  border-radius:16px; padding:12px;
+  max-width:90%; width:880px; max-height:80%; height:480px;
+  display:flex; flex-direction:column; align-items:center; justify-content:center;
+}
+#youtube-content iframe { width:100%; height:100%; border-radius:10px; border:none; }
+
+/* QR overlay */
+#qr-overlay {
+  display:none; position:fixed; inset:0; background: rgba(0,0,0,0.55);
+  z-index:70; align-items:center; justify-content:center; opacity:0; transition:opacity .28s;
+}
 #qr-content {
-  background: rgba(255,255,255,0.14); backdrop-filter: blur(10px); border-radius:16px; padding:16px;
-  max-width: 26vw; width:26vw; max-height: 72vh; height:72vh;
+  background: rgba(255,255,255,0.14); backdrop-filter: blur(10px);
+  border-radius:16px; padding:16px;
+  max-width: 26vw; width:26vw;
+  max-height: 72vh; height:72vh;
   display:flex; flex-direction:column; align-items:center; justify-content:center;
 }
 #qr-content img { height: 15vh; max-height:15vh; object-fit:contain; border-radius:8px; }
 #qr-content p { color:#d0d0d0; margin-top:12px; font-size:0.95rem; text-align:center; }
+
+/* QR and VR buttons */
 #top-qr-button, #vr-button {
   position:fixed; right: 12px; padding:8px 12px; border-radius:12px;
-  background: rgba(0,0,0,0.18); backdrop-filter: blur(8px); color:#fff; z-index:80; cursor:pointer;
-  font-family:'Saira',sans-serif; font-size:0.95rem;
+  background: rgba(0,0,0,0.18); backdrop-filter: blur(8px);
+  color:#fff; z-index:80; cursor:pointer; font-family:'Saira',sans-serif; font-size:0.95rem;
 }
 #top-qr-button { top:12px; }
 #vr-button { top:64px; display:none; }
+
+/* responsive adjustments */
 @media (max-width:900px) {
   #overlay-content { width:86vw; height:58vh; padding:18px; font-size:0.98rem; }
   #qr-content { width:48vw; height:56vh; max-height:56vh; }
@@ -85,12 +183,15 @@ body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; position:relat
 
 <div id="panorama"></div>
 
+<!-- Intro overlay -->
 <div id="overlay" role="dialog" aria-modal="true">
   <div id="overlay-content" role="document">
     <div>
       <p>Hi, I'm Lex, a nobody magician who enjoys travel, tech and research. These images are from my recent travels in Northern California taken with a DJI OSMO 360 camera at 120 MP.</p>
       <p>If you would like to see my other work click <span id="preview-link" style="text-decoration:underline; color:#bfe; cursor:pointer;">here</span>.</p>
+
       <div style="height:8px;"></div>
+
       <div id="instructions-line">Instructions</div>
       <div id="instructions-list">
         <p>• Click and drag to look around.</p>
@@ -98,39 +199,46 @@ body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; position:relat
         <p>• Use fullscreen button for best experience.</p>
       </div>
     </div>
+
     <div style="margin-top:10px; text-align:center;">
       <div id="dismiss-message">Click Anywhere to Dismiss this Message</div>
     </div>
   </div>
 </div>
 
+<!-- Tooltip preview -->
 <div id="tooltip-preview" role="tooltip" aria-hidden="true">
   <img src="https://i.imgur.com/eKxOrcZ.jpeg" alt="preview" style="width:100%; height:auto; border-radius:8px; display:block; margin-bottom:8px;">
   <div style="font-size:0.9rem;"><a id="tooltip-link" href="https://linktr.ee/lexofdystopia" target="_blank" rel="noopener" style="color:#fff; text-decoration:underline;">https://linktr.ee/lexofdystopia</a></div>
 </div>
 
+<!-- Manhattan Beach panel -->
 <div id="hotspot-panel" aria-hidden="true">
   Manhattan Beach at Half Moon Bay, California located in the San Francisco Bay Area.<br>
   The Ritz-Carlton can be seen on the distant cliffs.<br>
   The coastal shores are lined with miles of golf courses.
 </div>
 
+<!-- 360 video link panel -->
 <div id="video-link-panel" aria-hidden="true">
   <span id="manhattan-video-text" style="text-decoration:underline; color:#9fd6ff;">Click Here to Watch a 360 Video of this Location</span>
 </div>
 
 <div id="license-bar">Loading license...</div>
 
+<!-- QR and VR buttons -->
 <button id="top-qr-button" aria-controls="qr-overlay" aria-expanded="false">QR</button>
 <button id="vr-button" aria-hidden="true">VR</button>
 
+<!-- YouTube overlay -->
 <div id="youtube-overlay" aria-hidden="true">
   <div id="youtube-content">
-    <iframe id="youtube-frame" allow="autoplay; fullscreen" allowfullscreen referrerpolicy="no-referrer"></iframe>
+    <iframe id="youtube-frame" allowfullscreen referrerpolicy="no-referrer"></iframe>
     <p style="color:#d0d0d0; margin-top:10px; font-size:0.95rem;">Click Anywhere to Dismiss this Video</p>
   </div>
 </div>
 
+<!-- QR overlay -->
 <div id="qr-overlay" aria-hidden="true">
   <div id="qr-content">
     <img src="VRQR.png" alt="QR code">
@@ -139,9 +247,17 @@ body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; position:relat
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.js"></script>
+
 <script>
 const panoURL = "https://i.imgur.com/FYdmUI3.jpeg";
-const viewer = pannellum.viewer('panorama',{type:'equirectangular',panorama:panoURL,autoLoad:true,hfov:100,showFullscreenCtrl:true,showZoomCtrl:false,compass:false});
+const viewer = pannellum.viewer('panorama', {
+  type:'equirectangular',
+  panorama: panoURL,
+  autoLoad:true,
+  hfov:100,
+  showFullscreenCtrl:true,
+  showZoomCtrl:false
+});
 
 const overlay = document.getElementById('overlay');
 const overlayContent = document.getElementById('overlay-content');
@@ -158,52 +274,79 @@ const youtubeOverlay = document.getElementById('youtube-overlay');
 const youtubeFrame = document.getElementById('youtube-frame');
 const licenseBar = document.getElementById('license-bar');
 
-overlay.addEventListener('click',(ev)=>{
-  if(ev.target.closest && ev.target.closest('#overlay-content')) return;
-  overlay.setAttribute('aria-hidden','true'); overlay.style.display='none';
-  hotspotPanel.style.display='block'; videoLinkPanel.style.display='block';
-  hotspotPanel.classList.add('pulse-white'); setTimeout(()=>hotspotPanel.classList.remove('pulse-white'),2000);
+/* overlay dismissal anywhere except "here" */
+overlay.addEventListener('click', (ev) => {
+  if(ev.target.closest && ev.target.closest('#preview-link')) return;
+  overlay.setAttribute('aria-hidden','true');
+  overlay.style.display='none';
+  hotspotPanel.style.display='block';
+  videoLinkPanel.style.display='block';
+  hotspotPanel.classList.add('pulse-white');
+  setTimeout(()=>hotspotPanel.classList.remove('pulse-white'),2000);
+
   detectVRHeadset().then(info=>{
-    if(info){ vrBtn.style.display='block'; vrBtn.setAttribute('aria-hidden','false');
-      if(!hotspotPanel.dataset.vrmsg){ hotspotPanel.dataset.vrmsg='1';
-        const em=document.createElement('div'); em.style.marginTop='8px'; em.style.fontSize='0.9rem';
-        em.style.color='#dcdcdc'; em.innerHTML='<em>Press the VR button under the QR button to launch immersive VR.</em>';
+    if(info){
+      vrBtn.style.display='block';
+      vrBtn.setAttribute('aria-hidden','false');
+      if(!hotspotPanel.dataset.vrmsg){
+        hotspotPanel.dataset.vrmsg='1';
+        const em=document.createElement('div');
+        em.style.marginTop='8px';
+        em.style.fontSize='0.9rem';
+        em.style.color='#dcdcdc';
+        em.innerHTML='<em>Press the VR button under the QR button to launch immersive VR.</em>';
         hotspotPanel.appendChild(em);
       }
     }
   });
 });
 
-fetch('LICENSE').then(r=>r.ok?r.text():Promise.reject('no')).then(text=>{ licenseBar.textContent=text; }).catch(()=>{ licenseBar.textContent='LICENSE file not found.'; });
+/* LICENSE */
+fetch('LICENSE').then(r=>r.ok?r.text():Promise.reject('no'))
+.then(text=>licenseBar.textContent=text)
+.catch(()=>licenseBar.textContent='LICENSE file not found.');
 
-function showTooltip(){ tooltip.style.display='block'; tooltip.setAttribute('aria-hidden','false'); tooltip.offsetHeight;
-  const rect = previewLink.getBoundingClientRect();
-  let left=rect.left+rect.width/2-tooltip.offsetWidth/2;
-  let top=rect.top-tooltip.offsetHeight-10;
+/* tooltip hover */
+function showTooltip(){
+  tooltip.style.display='block';
+  tooltip.setAttribute('aria-hidden','false');
+  tooltip.offsetHeight;
+  const rect=previewLink.getBoundingClientRect();
+  const ttWidth=tooltip.offsetWidth, ttHeight=tooltip.offsetHeight;
+  let top=rect.top-ttHeight-10, left=rect.left+rect.width/2-ttWidth/2;
   if(top<8) top=rect.bottom+10;
   if(left<8) left=8;
-  if(left+tooltip.offsetWidth>window.innerWidth-8) left=window.innerWidth-tooltip.offsetWidth-8;
-  tooltip.style.left=Math.round(left)+'px'; tooltip.style.top=Math.round(top)+'px';
+  if(left+ttWidth>window.innerWidth-8) left=window.innerWidth-ttWidth-8;
+  tooltip.style.left=Math.round(left)+'px';
+  tooltip.style.top=Math.round(top)+'px';
 }
 previewLink.addEventListener('mouseenter',()=>showTooltip());
-previewLink.addEventListener('mouseleave',()=>setTimeout(()=>{ if(!tooltip.matches(':hover')&&!previewLink.matches(':hover')){ tooltip.style.display='none'; tooltip.setAttribute('aria-hidden','true'); } },80));
+previewLink.addEventListener('mouseleave',()=>setTimeout(()=>{if(!tooltip.matches(':hover')&&!previewLink.matches(':hover')){tooltip.style.display='none';tooltip.setAttribute('aria-hidden','true');}},80));
 tooltip.addEventListener('mouseenter',()=>showTooltip());
-tooltip.addEventListener('mouseleave',()=>{ tooltip.style.display='none'; tooltip.setAttribute('aria-hidden','true'); });
-previewLink.addEventListener('click',(e)=>{ e.stopPropagation(); e.preventDefault(); window.open('https://linktr.ee/lexofdystopia','_blank','noopener'); });
-tooltipLink.addEventListener('click',e=>{ e.stopPropagation(); });
+tooltip.addEventListener('mouseleave',()=>{tooltip.style.display='none';tooltip.setAttribute('aria-hidden','true');});
+previewLink.addEventListener('click',(e)=>{e.stopPropagation(); e.preventDefault(); window.open('https://linktr.ee/lexofdystopia','_blank','noopener');});
 
-videoLinkPanel.addEventListener('click',e=>{ e.stopPropagation(); youtubeFrame.src="https://www.youtube.com/embed/sfYM1-_WbWk?rel=0&autoplay=1&enablejsapi=1"; youtubeOverlay.style.display='flex'; requestAnimationFrame(()=> youtubeOverlay.style.opacity=1); });
-youtubeOverlay.addEventListener('click',()=>{ youtubeOverlay.style.opacity=0; setTimeout(()=>{ youtubeOverlay.style.display='none'; youtubeFrame.src=''; },280); });
+/* 360 video */
+videoLinkPanel.addEventListener('click', e=>{e.stopPropagation(); youtubeFrame.src="https://www.youtube.com/embed/sfYM1-_WbWk?rel=0&autoplay=1"; youtubeOverlay.style.display='flex'; requestAnimationFrame(()=>youtubeOverlay.style.opacity=1);});
+youtubeOverlay.addEventListener('click',()=>{youtubeOverlay.style.opacity=0; setTimeout(()=>{youtubeOverlay.style.display='none'; youtubeFrame.src='';},280);});
 
-qrBtn.addEventListener('click',e=>{ e.stopPropagation(); qrOverlay.style.display='flex'; requestAnimationFrame(()=>qrOverlay.style.opacity=1); });
-qrOverlay.addEventListener('click',()=>{ qrOverlay.style.opacity=0; setTimeout(()=>qrOverlay.style.display='none',300); });
-qrContent.addEventListener('click',e=>e.stopPropagation());
+/* QR overlay */
+qrBtn.addEventListener('click', e=>{e.stopPropagation(); qrOverlay.style.display='flex'; requestAnimationFrame(()=>qrOverlay.style.opacity=1);});
+qrOverlay.addEventListener('click', ()=>{qrOverlay.style.opacity=0; setTimeout(()=>qrOverlay.style.display='none',300);});
+qrContent.addEventListener('click', e=>e.stopPropagation());
 
-async function detectVRHeadset(){ if(navigator.xr && navigator.xr.isSessionSupported){ try{ const supported=await navigator.xr.isSessionSupported('immersive-vr'); if(supported) return { manufacturer:'WebXR', model:'immersive-vr' }; }catch(e){} } const ua=navigator.userAgent||''; if(/OculusBrowser|Oculus|Quest|Meta Quest/i.test(ua)) return { manufacturer:'Oculus', model:'Quest' }; return null; }
+/* VR detection */
+async function detectVRHeadset(){
+  if(navigator.xr && navigator.xr.isSessionSupported){try{const supported=await navigator.xr.isSessionSupported('immersive-vr'); if(supported) return {manufacturer:'WebXR',model:'immersive-vr'};}catch(e){}}
+  const ua=navigator.userAgent||''; if(/OculusBrowser|Oculus|Quest|Meta Quest/i.test(ua)) return {manufacturer:'Oculus', model:'Quest'};
+  return null;
+}
 
-vrBtn.addEventListener('click',e=>{ e.stopPropagation(); const w=window.open('vr.html','_blank','noopener'); if(!w) alert('Popup blocked. Allow popups for immersive VR.'); });
+/* VR button */
+vrBtn.addEventListener('click', e=>{e.stopPropagation(); const w=window.open('vr.html','_blank','noopener'); if(!w) alert('Popup blocked. Allow popups for immersive VR.')});
 
-document.addEventListener('keydown',(e)=>{ if(e.key==='Escape'){ if(youtubeOverlay.style.display==='flex'){ youtubeOverlay.style.opacity=0; setTimeout(()=>{ youtubeOverlay.style.display='none'; youtubeFrame.src=''; },280); } if(qrOverlay.style.display==='flex'){ qrOverlay.style.opacity=0; setTimeout(()=>qrOverlay.style.display='none',280); } } });
+/* keyboard ESC for overlays */
+document.addEventListener('keydown', e=>{if(e.key==='Escape'){if(youtubeOverlay.style.display==='flex'){youtubeOverlay.style.opacity=0; setTimeout(()=>{youtubeOverlay.style.display='none'; youtubeFrame.src='';},280);} if(qrOverlay.style.display==='flex'){qrOverlay.style.opacity=0; setTimeout(()=>qrOverlay.style.display='none',280);}}});
 </script>
 </body>
 </html>
